--- a/index.html
+++ b/index.html
@@ -1,8 +1,25 @@
 <html>
+
 	<head>
+	<link rel="stylesheet" href="estilo.css">
+		<meta charset="UTF-8"/>
 	</head>
+
 	<body>
-		<h1>Projeto Alexandre Santana</h1>
-		<h1>Nova versão</h1>
-	</body>	
+		<h1>Git</h1>
+		<h2>Trabalhando em equipe com controle e seguranca</h2>
+		
+		<ul>
+			<li>Fazer backup do seu projeto nao e o bastante para desfazer 
+			alteracoes com seguranca e eficiencia</li>
+			
+			<li>Experimente solucoes alternativas em seu codigo sem arriscar 
+			a integridade do seu projeto</li>
+			<li>Varias copias do mesmo ambiente, cada um com uma alteracao 
+			do sistema</li>
+			
+			<li>E tudo isso sem precisar de conexao com a internet</li>
+		</ul>
+	</body>
+
 </html>
